--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     "openapi-client-axios-typegen": "^5.0.2",
     "phosphor-react": "^1.4.1",
     "react": "^17.0.2",
+    "react-archer": "^4.1.0",
     "react-dom": "^17.0.2",
     "react-flow-renderer": "^10.3.16",
     "react-icons": "^4.3.1",
@@ -31,6 +32,7 @@
     "autoprefixer": "^10.4.8",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
+    "patch-package": "^6.4.7",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "tailwindcss-labeled-groups": "^0.0.2",
@@ -42,7 +44,8 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "postinstall": "patch-package"
   },
   "version": "0.1.0"
 }
