--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ nltk = "^3.7"
 tenacity = "^8.0.1"
 thefuzz = "^0.19.0"
 python-Levenshtein = "^0.12.2"
+parse = "^1.19.0"
+more-itertools = "^8.14.0"
 sentencepiece = { version = "^0.1.96", optional = true }
 protobuf = { version = "^3.20.1", optional = true }
 plotly = { version = "^5.9.0", optional = true }
@@ -40,7 +42,7 @@ black = "^22.3.0"
 pylint = "v3.0.0a3"
 pytest = "^6.2.5"
 pytest-cov = "^3.0.0"
-mypy = "v0.971"
+mypy = "v0.981"
 pre-commit = "^2.19.0"
 autoflake = "^1.4"
 flake8 = { version = "^4.0.1", optional = true }
