--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pandas = "^1.4.2"
 plotly = { version = "^5.9.0", optional = true }
 protobuf = { version = "^3.20.1", optional = true }
 pydantic = "^1.9.1"
+python-dotenv = "^0.21.0"
 python-Levenshtein = "^0.12.2"
 questionary = "^1.10.0"
 rich = "^12.4.1"
@@ -34,6 +35,7 @@ tqdm = "^4.64.0"
 transformers = "^4.19.2"
 ulid-py = "^1.1.0"
 uvicorn = "^0.18.3"
+websockets = "^10.3"
 
 
 [tool.poetry.dev-dependencies]
