--- a/.github/workflows/deploy-preview-all.yml
+++ b/.github/workflows/deploy-preview-all.yml
@@ -29,7 +29,9 @@ jobs:
 
       - name: Deploy
         id: deploy
-        uses: superfly/fly-pr-review-apps@main
+        # This version enables setting secrets on the app.
+        # See https://github.com/superfly/fly-pr-review-apps/pull/3/files
+        uses: oughtinc/fly-pr-review-apps@5d455e7f825bd7f2bb6758ce48bbda3e6f0db366
         with:
           name: ice-pr-${{ github.event.number }}-backend
           secrets: "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} OPENAI_ORG_ID=${{ secrets.OPENAI_ORG_ID }} OUGHT_INFERENCE_API_KEY=${{ secrets.OUGHT_INFERENCE_API_KEY }}"
