--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,11 +30,11 @@ plotly = { version = "^5.9.0", optional = true }
 stqdm = { version = "^0.0.4", optional = true }
 streamlit = { version = "^1.10.0", optional = true }
 tqdm = "^4.64.0"
-torch = [
-    { url = "https://download.pytorch.org/whl/cu116/torch-1.12.0%2Bcu116-cp310-cp310-linux_x86_64.whl", optional = true },
-]
+torch = { url = "https://download.pytorch.org/whl/cu116/torch-1.12.0%2Bcu116-cp310-cp310-linux_x86_64.whl", optional = true }
 merge-args = "^0.1.4"
 python-dotenv = "^0.21.0"
+uvicorn = "^0.18.3"
+websockets = "^10.3"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
