--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -59,6 +59,6 @@ jobs:
       - name: Deploy on Vercel
         id: vercel-deploy
         run: |
-          export FRONTEND_URL=$(npx vercel --confirm --prod --token ${{ secrets.VERCEL_TOKEN }} --scope ${{ secrets.VERCEL_TEAM_ID }} -b NEXT_PUBLIC_BACKEND_URL=${{ needs.deploy-backend-prod.outputs.backend_url}})
+          export FRONTEND_URL=$(npx vercel --confirm --prod --token ${{ secrets.VERCEL_TOKEN }} --scope ${{ secrets.VERCEL_TEAM_ID }} -b NEXT_PUBLIC_BACKEND_API_KEY=${{ secrets.NEXT_PUBLIC_BACKEND_API_KEY }} -b NEXT_PUBLIC_BACKEND_URL=${{ needs.deploy-backend-prod.outputs.backend_url}})
           echo "Deployed to Vercel at: ${FRONTEND_URL}"
           echo "::set-output name=frontend_url::${FRONTEND_URL}"
