--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ transformers = "^4.19.2"
 ulid-py = "^1.1.0"
 uvicorn = "^0.18.3"
 websockets = "^10.3"
+pyvespa = "^0.30.0"
 
 [tool.poetry.dev-dependencies]
 autoflake = "^1.4"
