--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ ulid-py = "^1.1.0"
 uvicorn = "^0.18.3"
 websockets = "^10.3"
 scikit-learn = "^1.1.3"
+matplotlib = "^3.6.2"
 
 [tool.poetry.dev-dependencies]
 autoflake = "^1.4"
