Migrate from Next to SPA React with Vite, now servable from FastAPI

--- a/ui/package.json
+++ b/ui/package.json
@@ -8,11 +8,11 @@
     "framer-motion": "^6.3.3",
     "immer": "^9.0.15",
     "lodash": "^4.17.21",
-    "next": "12.1.6",
     "phosphor-react": "^1.4.1",
     "react": "^17.0.2",
     "react-archer": "^4.1.0",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.4.3",
     "react-syntax-highlighter": "^15.5.0",
     "ulidx": "^0.3.0"
   },
@@ -21,22 +21,22 @@
     "@types/react": "^17.0.48",
     "@types/react-dom": "^17.0.17",
     "@types/react-syntax-highlighter": "^15.5.5",
+    "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.8",
     "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6",
     "patch-package": "^6.4.7",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "tailwindcss-labeled-groups": "^0.0.2",
-    "typescript": "4.6.4"
+    "ts-node": "^10.9.1",
+    "typescript": "4.6.4",
+    "vite": "^3.2.4"
   },
   "name": "ui",
   "private": true,
   "scripts": {
-    "build": "next build",
-    "dev": "next dev",
-    "lint": "next lint",
-    "start": "next start",
+    "build": "vite build",
+    "dev": "vite",
     "postinstall": "patch-package"
   },
   "version": "0.2.0"
