--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 /.pre-commit-home
 /data
 /ice/contrib/*/
+/ice/version.py
 /papers/*.pdf
 /papers/*.txt
 !/papers/keenan-2018-tiny.txt
@@ -24,3 +25,4 @@
 /ui/.next/
 /ui/node_modules
 /ui/dist/
+/venv/
