--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,61 +1,10 @@
-[tool.poetry]
-name = "ice"
-version = "0.2.0"
-description = ""
-authors = ["Ought <team@ought.org>"]
-
-[tool.poetry.dependencies]
-python = "3.10.4"
-"ruamel.yaml" = "^0.17.21"
-Faker = "^13.12.1"
-defopt = "^6.3.0"
-fastapi = "^0.85.0"
-httpx = "^0.23.0"
-merge-args = "^0.1.4"
-nest-asyncio = "^1.5.5"
-nltk = "^3.7"
-numerizer = "0.2.1"  # Simple regex-ing module with no transitive dependencies, let's pin it hard
-numpy = "^1.22.3"
-pandas = "^1.4.2"
-plotly = { version = "^5.9.0", optional = true }
-protobuf = { version = "^3.20.1", optional = true }
-pydantic = "^1.9.1"
-python-Levenshtein = "^0.12.2"
-python-dotenv = "^0.21.0"
-questionary = "^1.10.0"
-rich = "^12.4.1"
-rouge-metric = "^1.0.1"
-sentencepiece = { version = "^0.1.96", optional = true }
-stqdm = { version = "^0.0.4", optional = true }
-streamlit = { version = "^1.10.0", optional = true }
-structlog = "^21.5.0"
-tenacity = "^8.0.1"
-thefuzz = "^0.19.0"
-torch = { url = "https://download.pytorch.org/whl/cu116/torch-1.12.0%2Bcu116-cp310-cp310-linux_x86_64.whl", optional = true }
-tqdm = "^4.64.0"
-transformers = "^4.19.2"
-ulid-py = "^1.1.0"
-uvicorn = "^0.18.3"
-websockets = "^10.3"
-
-[tool.poetry.dev-dependencies]
-autoflake = "^1.4"
-black = "^22.3.0"
-flake8 = { version = "^4.0.1", optional = true }
-mypy = "v0.971"
-pre-commit = "^2.19.0"
-pylint = "v3.0.0a3"
-pytest = "^6.2.5"
-pytest-cov = "^3.0.0"
-pytest-mock = "^3.8.2"
-
-[tool.poetry.extras]
-streamlit = ["plotly", "stqdm", "streamlit"]
-torch = ["torch", "sentencepiece", "protobuf"]
-
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools>=44", "wheel", "setuptools_scm[toml]>=3.4.3"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools_scm]
+write_to = "ice/version.py"
+write_to_template = "__version__ = '{version}'\n"
 
 [tool.pytest.ini_options]
 markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
