--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@
 /data
 /ice/contrib/*/
 /ice/version.py
+/ice/routes/ui/
 /papers/*.pdf
 /papers/*.txt
 !/papers/keenan-2018-tiny.txt
@@ -26,5 +27,4 @@
 /store
 /ui/.next/
 /ui/node_modules
-/ui/dist/
 /venv/
