don't pin numerizer

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,7 @@ install_requires =
     merge-args
     nest-asyncio
     nltk
-    numerizer==0.2.1
+    numerizer
     numpy
     pandas
     pydantic
