Set python_requires to 3.10 only

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ install_requires =
     uvicorn
     websockets
 
+python_requires = >=3.10,<3.11
 setup_requires = setuptools>=44; setuptools_scm[toml]>=3.4.3
 include_package_data = True
 
