--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -23,3 +23,4 @@ jobs:
           # branch should not be protected
           branch: "signatures"
           allowlist: user1,bot*
+          lock-pullrequest-aftermerge: false
