--- a/ui/package.json
+++ b/ui/package.json
@@ -4,6 +4,8 @@
     "@chakra-ui/system": "^2.3.7",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "ag-grid-community": "^28.2.1",
+    "ag-grid-react": "^28.2.1",
     "classnames": "^2.3.2",
     "framer-motion": "^7.6.19",
     "immer": "^9.0.17",
