f-string magic to_json_value replacing JSONEncoder

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,8 +14,9 @@ classifiers =
 [options]
 packages = ice
 install_requires =
-    Faker
+    executing
     defopt
+    faker
     fastapi
     httpx
     matplotlib
