use new fvalues library

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,10 +14,10 @@ classifiers =
 [options]
 packages = ice
 install_requires =
-    executing
     defopt
     faker
     fastapi
+    fvalues
     httpx
     matplotlib
     merge-args
