--- a/ui/package.json
+++ b/ui/package.json
@@ -17,11 +17,11 @@
     "ulidx": "^0.4.0"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.0.0-beta.12",
-    "@storybook/addon-interactions": "^7.0.0-beta.13",
-    "@storybook/addon-links": "^7.0.0-alpha.59",
-    "@storybook/react": "^7.0.0-alpha.59",
-    "@storybook/react-vite": "^7.0.0-alpha.59",
+    "@storybook/addon-essentials": "^7.0.0-beta.19",
+    "@storybook/addon-interactions": "^7.0.0-beta.19",
+    "@storybook/addon-links": "^7.0.0-beta.19",
+    "@storybook/react": "^7.0.0-beta.19",
+    "@storybook/react-vite": "^7.0.0-beta.19",
     "@storybook/testing-library": "^0.0.13",
     "@types/node": "18.11.17",
     "@types/react": "^18.0.26",
@@ -33,7 +33,7 @@
     "eslint-plugin-storybook": "^0.6.8",
     "patch-package": "^6.5.0",
     "postcss": "^8.4.19",
-    "storybook": "^7.0.0-beta.13",
+    "storybook": "^7.0.0-beta.19",
     "tailwindcss": "^3.2.4",
     "tailwindcss-labeled-groups": "^0.0.2",
     "typescript": "4.9.4",
