Switch to python-ulid

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ install_requires =
     pydantic
     python-Levenshtein
     python-dotenv
+    python-ulid
     questionary
     rich
     rouge-metric
@@ -43,7 +44,6 @@ install_requires =
     tqdm
     transformers
     typing-extensions
-    ulid-py
     uvicorn
     websockets
 
