--- a/ui/package.json
+++ b/ui/package.json
@@ -48,7 +48,8 @@
     "build": "vite build",
     "dev": "vite",
     "postinstall": "patch-package",
-    "storybook": "storybook dev -p 6006"
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "version": "0.0.0"
 }
