Migrate Pydantic to V2
Related: #312

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ install_requires =
     numpy
     pandas
     pydantic
+    pydantic-settings
     python-Levenshtein
     python-dotenv
     python-ulid
