Fix issue #312 by constraining pydantic < v.2

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ install_requires =
     numerizer
     numpy
     pandas
-    pydantic
+    pydantic < 2
     python-Levenshtein
     python-dotenv
     python-ulid
